--- a/chatbox.html
+++ b/chatbox.html
@@ -15,7 +15,7 @@
 		</div>
 		<div class="right">
 			<div class="home">
-				<a href="webHome.html">Home</a>
+				<a href="index.html">Home</a>
 			</div>
 			<div class="ourvision">
 				<a href="about.html">Our Vision</a>
