--- a/chatbox.html
+++ b/chatbox.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Customer Support Tool</title>
+  <title>Health Plus</title>
   <link rel="stylesheet" type="text/css" href="chatbox.css">
   <link rel="stylesheet" type="text/css" href="head&body.css">
 </head>
